# Bark-Lead-Discovery-Scorer-And-Pitch-Generator-AI-Agent

./: .gitignore  README.md  bark_login.py  main.py  pyproject.toml
data/: leads.json
graph/: graph.py  prompts.py  states.py
graph/nodes/: analyst_node.py  auth_check_node.py  close_node.py  init_node.py  login_node.py  pitch_generator_node.py  scraper_node.py
utils/: database.py  helpers.py
